--- a/details.html
+++ b/details.html
@@ -25,9 +25,9 @@
       data-aos="fade-down"
     >
       <div class="container">
-        <a href="/index.html" class="navbar-brand">
+        <!-- <a href="/index.html" class="navbar-brand">
           <img src="public/images/Vector.png" alt="logo" />
-        </a>
+        </a> -->
 
         <button
           class="navbar-toggler"
@@ -152,15 +152,15 @@
       </section>
 
      
-      <div class="store-details-container" data-aos="fade-up">
+      <div class="store-details-container mt-3" data-aos="fade-up">
          <!-- Heading -->
         <section class="store-heading">
           <div class="container">
             <div class="row">
               <div class="col-lg-8">
-                <h1> Sofa Ternyaman</h1>
-                <div class="owner">By Meyzan</div>
-                <div class="price">$1,890</div>
+                <h1> Raja empat </h1>
+                <div class="owner">By Robbin joseph</div>
+                <div class="price">14,890</div>
               </div>
               <div class="col-lg-2" data-aos="zoom-in">
                 <a href="/card.html" class="btn btn-success px-4 text-white btn-block mb-3">
@@ -176,14 +176,13 @@
              <div class="row">
                <div class="col-12 col-lg-8">
                  <p>
-                  The Nike Air Max 720 SE goes bigger than ever before with Nike's tallest Air unit yet for unimaginable, all-day comfort. 
-                  There's super breathable fabrics on the upper, while colours add a modern edge.
+                  Kabupaten Raja Ampat adalah salah satu kabupaten di provinsi Papua Barat, Indonesia. Ibukota kabupaten ini terletak di Waisai. Kabupaten ini memiliki 610 pulau, termasuk kepulauan Raja Ampat. Empat di antaranya, yakni Pulau Misool, Salawati, Batanta dan Waigeo, merupakan pulau-pulau besar. Konon, suatu hari seorang wanita menemukan tujuh telur, empat diantaranya berubah menjadi pangeran dan tiga sisanya menjadi seorang wanita, hantu dan sebuah batu.
+                  Ke empat pangeran tadi berpisah lalu masing-masing berkuasa di Waigeo, Salawati, Batanta dan Misool
                  </p>
                  <p>
-                  Bring the past into the future with the Nike Air Max 2090, a bold look inspired by the DNA of the iconic Air Max 90. 
-                  Brand-new Nike Air cushioning underfoot adds unparalleled comfort 
-                  while transparent mesh and vibrantly coloured details on the upper are blended with timeless OG features for an edgy, 
-                  modernised look.
+                  Dilihat dari sisi sejarah, Kepulauan Raja Ampat di abad ke-15 merupakan bagian dari kekuasaan Kesultanan Tidore, sebuah kerajaan besar yang berpusat di Kepulauan Maluku. Untuk menjalankan pemerintahannya, Kesultanan Tidore menunjuk 4 orang Raja lokal untuk berkuasa di pulau Waigeo, Batanta, Salawati dan Misool.
+Istilah 4 orang Raja dalam yang memerintah di gugusan kepulauan itulah yang menjadi awal dari nama Raja Ampat.
+
                  </p>
                </div>
              </div>
@@ -267,19 +266,19 @@
           photos: [
             {
               id:1,
-              url: "public/images/details-product/1.jpg"
+              url: "public/images/papua/1.jpg"
             },
             {
               id:2,
-              url: "public/images/details-product/2.jpg"
+              url: "public/images/papua/2.jpg"
             },
             {
               id:3,
-              url: "public/images/details-product/3.jpg"
+              url: "public/images/papua/3.jpg"
             },
             {
               id:4,
-              url: "public/images/details-product/4.jpg"
+              url: "public/images/papua/4.jpg"
             },
           ],
         },
