--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         data-navbar-on-scroll="data-navbar-on-scroll"
       >
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <!-- <a class="navbar-brand" href="index.html"
             ><img src="public/assets/img/logo.svg" height="34" alt="logo"
-          /></a>
+          /></a> -->
           <button
             class="navbar-toggler"
             type="button"
@@ -339,7 +339,7 @@
               <div class="card overflow-hidden shadow">
                 <img
                   class="card-img-top"
-                  src="public/assets/img/dest/dest1.jpg"
+                  src="public/images/sumut/1.jpg"
                   alt="Rome, Italty"
                 />
                 <div class="card-body py-4 px-3">
@@ -350,10 +350,10 @@
                       <a
                         class="link-900 text-decoration-none stretched-link"
                         href="details.html"
-                        >Rome, Italty</a
+                        >Datau Toba, Sumatera Utara</a
                       >
                     </h4>
-                    <span class="fs-1 fw-medium">$5,42k</span>
+                    <span class="fs-1 fw-medium">10,42k</span>
                   </div>
                   <div class="d-flex align-items-center">
                     <img
@@ -370,7 +370,7 @@
               <div class="card overflow-hidden shadow">
                 <img
                   class="card-img-top"
-                  src="public/assets/img/dest/dest2.jpg"
+                  src="public/images/sulasel/3.jpg"
                   alt="London, UK"
                 />
                 <div class="card-body py-4 px-3">
@@ -381,10 +381,10 @@
                       <a
                         class="link-900 text-decoration-none stretched-link"
                         href="details.html"
-                        >London, UK</a
+                        >Pantai Tanjung, Sulawesi Selatan</a
                       >
                     </h4>
-                    <span class="fs-1 fw-medium">$4.2k</span>
+                    <span class="fs-1 fw-medium">14.2k</span>
                   </div>
                   <div class="d-flex align-items-center">
                     <img
@@ -401,7 +401,7 @@
               <div class="card overflow-hidden shadow">
                 <img
                   class="card-img-top"
-                  src="public/assets/img/dest/dest3.jpg"
+                  src="public/images/papua/1.jpg"
                   alt="Full Europe"
                 />
                 <div class="card-body py-4 px-3">
@@ -412,10 +412,10 @@
                       <a
                         class="link-900 text-decoration-none stretched-link"
                         href="details.html"
-                        >Full Europe</a
+                        >Raja emmpat</a
                       >
                     </h4>
-                    <span class="fs-1 fw-medium">$15k</span>
+                    <span class="fs-1 fw-medium">15.49k</span>
                   </div>
                   <div class="d-flex align-items-center">
                     <img
@@ -534,11 +534,11 @@
                 <div class="card-body p-3">
                   <img
                     class="mb-4 mt-2 rounded-2 w-100"
-                    src="public/assets/img/steps/booking-img.jpg"
+                    src="public/images/papua/2.jpg"
                     alt="booking"
                   />
                   <div>
-                    <h5 class="fw-medium">Trip To Greece</h5>
+                    <h5 class="fw-medium">Trip Raja empat</h5>
                     <p class="fs--1 mb-3 fw-medium">
                       14-29 June | by Robbin joseph
                     </p>
@@ -619,7 +619,7 @@
         <!-- end of .container-->
       </section>
 
-      <div class="position-relative pt-9 pt-lg-8 pb-6 pb-lg-8">
+      <!-- <div class="position-relative pt-9 pt-lg-8 pb-6 pb-lg-8">
         <div class="container">
           <div class="row row-cols-lg-5 row-cols-md-3 row-cols-2 flex-center">
             <div class="col">
@@ -679,7 +679,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
@@ -762,13 +762,13 @@
             <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
               <img
                 class="mb-4"
-                src="public/assets/img/logo2.svg"
+                src="public/images/logo.jpeg"
                 width="150"
                 alt="jadoo"
               />
-              <p class="fs--1 text-secondary mb-0 fw-medium">
+              <!-- <p class="fs--1 text-secondary mb-0 fw-medium">
                 Book your trip in minute, get full Control for much longer.
-              </p>
+              </p> -->
             </div>
             <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
               <h4
@@ -880,21 +880,6 @@
                   href="#!"
                   ><i class="fab fa-twitter"> </i
                 ></a>
-              </div>
-              <h4 class="fw-medium font-sans-serif text-secondary mb-3">
-                Discover our app
-              </h4>
-              <div class="d-flex align-items-center">
-                <a href="#!">
-                  <img
-                    class="me-2"
-                    src="public/assets/img/play-store.png"
-                    alt="play store" /></a
-                ><a href="#!">
-                  <img
-                    src="public/assets/img/apple-store.png"
-                    alt="apple store"
-                /></a>
               </div>
             </div>
           </div>
