--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
       data-navbar-on-scroll="data-navbar-on-scroll"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html"
+        <!-- <a class="navbar-brand" href="index.html"
           ><img src="public/assets/img/logo.svg" height="34" alt="logo"
-        /></a>
+        /></a> -->
         <button
           class="navbar-toggler"
           type="button"
@@ -69,8 +69,8 @@
             </div>
             <div class="col-lg-5">
               <h2>
-                Belanja Kebutuhan Utama <br />
-                Menjadi Lebih Muda
+                Liburan dalam virtual <br />
+                menjadi lebih mudah
               </h2>
               <form action="" class="mt-3">
                 <div class="form-group">
