--- a/register.html
+++ b/register.html
@@ -21,9 +21,9 @@
       data-aos="fade-down"
     >
       <div class="container">
-        <a href="/index.html" class="navbar-brand">
+        <!-- <a href="/index.html" class="navbar-brand">
           <img src="public/images/Vector.png" alt="logo" />
-        </a>
+        </a> -->
 
         <button
           class="navbar-toggler"
