--- a/kategori.html
+++ b/kategori.html
@@ -165,7 +165,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12" data-aos="fade-up">
-              <h5>Destinasi Pulau Sumatera</h5>
+              <h5>Destinasi Pulau Sumatera Utara</h5>
             </div>
           </div>
           <div class="row">
@@ -178,10 +178,10 @@
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
-                    style="background-image: url('public/images/pic.jpg')"
+                    style="background-image: url('public/images/sumut/1.jpg')"
                   ></div>
                 </div>
-                <div class="products-text">Benteng Marlborugh (Bengkulu)</div>
+                <div class="products-text">Danau Toba</div>
                 <div class="products-price">$890</div>
               </a>
             </div>
@@ -195,10 +195,10 @@
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
-                    style="background-image: url('public/images/pic.jpg')"
+                    style="background-image: url('public/images/sumut/1.jpg')"
                   ></div>
                 </div>
-                <div class="products-text">Apple Watch 4</div>
+                <div class="products-text">Danau Toba</div>
                 <div class="products-price">$890</div>
               </a>
             </div>
@@ -212,10 +212,10 @@
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
-                    style="background-image: url('public/images/pic.jpg')"
+                    style="background-image: url('public/images/sumut/1.jpg')"
                   ></div>
                 </div>
-                <div class="products-text">Apple Watch 4</div>
+                <div class="products-text">Danau Toba</div>
                 <div class="products-price">$890</div>
               </a>
             </div>
@@ -229,10 +229,10 @@
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
-                    style="background-image: url('public/images/pic.jpg')"
+                    style="background-image: url('public/images/sumut/1.jpg')"
                   ></div>
                 </div>
-                <div class="products-text">Apple Watch 4</div>
+                <div class="products-text">Danau Toba</div>
                 <div class="products-price">$890</div>
               </a>
             </div>
