--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <a class="nav-link text-danger fw-medium" aria-current="page" href="#aboutus"><i class="fas fa-question-circle text-warning"></i> About Us</a>
               </li>
               <li class="nav-item px-3 px-xl-4">
-                <a class="nav-link text-danger fw-medium" aria-current="page" href="#destination">Destination</a>
+                <a class="nav-link text-danger fw-medium" aria-current="page" href="#services">Services</a>
               </li>
               <li class="nav-item px-3 px-xl-4">
-                <a class="nav-link text-danger fw-medium" aria-current="page" href="#services">Services</a>
+                <a class="nav-link text-danger fw-medium" aria-current="page" href="#destination">Destination</a>
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a class="nav-link text-danger fw-medium" aria-current="page" href="#partners">Our Partners</a>
@@ -220,6 +220,183 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+        <!-- end of .container-->
+      </section>
+      <!-- <section> close ============================-->
+
+      <!-- <section> begin ============================-->
+      <section id="services">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 d-flex justify-content-center align-items-start">
+              <div class="card position-relative shadow" style="max-width: 370px">
+                <div
+                        class="position-absolute z-index--1 me-10 me-xxl-0"
+                        style="right: -160px; top: -210px"
+                >
+                  <img
+                          src="public/assets/img/steps/bg.png"
+                          style="max-width: 550px"
+                          alt="shape"
+                  />
+                </div>
+                <div class="card-body p-3">
+                  <img
+                          class="mb-4 mt-2 rounded-2 w-100"
+                          src="public/images/papua/2.jpg"
+                          alt="booking"
+                  />
+                  <div>
+                    <h5 class="fw-medium">Trip Raja empat</h5>
+                    <p class="fs--1 mb-3 fw-medium">
+                      14-29 June | by Robbin joseph
+                    </p>
+                    <div class="icon-group mb-4">
+                      <span class="btn icon-item">
+                        <img
+                                src="public/assets/img/steps/leaf.svg"
+                                alt="" /></span
+                      ><span class="btn icon-item">
+                        <img
+                                src="public/assets/img/steps/map.svg"
+                                alt="" /></span
+                    ><span class="btn icon-item">
+                        <img src="public/assets/img/steps/send.svg" alt=""
+                        /></span>
+                    </div>
+                    <div
+                            class="d-flex align-items-center justify-content-between"
+                    >
+                      <div class="d-flex align-items-center mt-n1">
+                        <img
+                                class="me-3"
+                                src="public/assets/img/steps/building.svg"
+                                width="18"
+                                alt="building"
+                        /><span class="fs--1 fw-medium">24 people going</span>
+                      </div>
+                      <div class="show-onhover position-relative">
+                        <div
+                                class="card hideEl shadow position-absolute end-0 start-xl-50 bottom-100 translate-xl-middle-x ms-3"
+                                style="width: 260px; border-radius: 18px"
+                        >
+                          <div class="card-body py-3">
+                            <div class="d-flex">
+                              <div style="margin-right: 10px">
+                                <img
+                                        class="rounded-circle"
+                                        src="public/assets/img/steps/favorite-placeholder.png"
+                                        width="50"
+                                        alt="favorite"
+                                />
+                              </div>
+                              <div>
+                                <p class="fs--1 mb-1 fw-medium">Ongoing</p>
+                                <h5 class="fw-medium mb-3">Trip to rome</h5>
+                                <h6 class="fs--1 fw-medium mb-2">
+                                  <span>40%</span> completed
+                                </h6>
+                                <div class="progress" style="height: 6px">
+                                  <div
+                                          class="progress-bar"
+                                          role="progressbar"
+                                          style="width: 40%"
+                                          aria-valuenow="25"
+                                          aria-valuemin="0"
+                                          aria-valuemax="100"
+                                  ></div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="btn">
+                          <img
+                                  src="public/assets/img/steps/heart.svg"
+                                  width="20"
+                                  alt="step"
+                          />
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="mb-4 text-start">
+                <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Our Services</h3>
+                <h5 class="text-secondary">Tidak hanya berwisata secara virtual360,<br>
+                  pengunjung dapat merasakan berbagai pengalaman menarik lainnya dengan berbagai macam layanan yang tersedia.
+                </h5>
+              </div>
+              <a href="">
+                <div class="d-flex align-items-start mb-5">
+                  <div class="bg-primary me-sm-4 me-3 p-3" style="border-radius: 13px">
+                    <img
+                            src="public/assets/img/steps/selection.svg"
+                            width="22"
+                            alt="steps"
+                    />
+                  </div>
+                  <div class="flex-1">
+                    <h5 class="text-secondary fw-bold fs-0">
+                      <a href="#">Virtual Tour 360</a>
+                    </h5>
+                    <p>
+                      Dengan teknologi 3D view 360 di mana memungkinkan
+                      <br class="d-none d-sm-block" />
+                      untuk mengelilingi Indonesia tanpa harus berpindah tempat.
+                    </p>
+                  </div>
+                </div>
+              </a>
+              <a href="">
+                <div class="d-flex align-items-start mb-5">
+                  <div class="bg-danger me-sm-4 me-3 p-3" style="border-radius: 13px">
+                    <img
+                            src="public/assets/img/steps/water-sport.svg"
+                            width="22"
+                            alt="steps"
+                    />
+                  </div>
+                  <div class="flex-1">
+                    <h5 class="text-secondary fw-bold fs-0">
+                      <a href="#">Marketplace UMKM</a>
+                    </h5>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at itaque nobis perspiciatis saepe! Architecto, blanditiis
+                      commodi consectetur consequatur consequuntur distinctio hic inventore labore omnis, quisquam recusandae
+                      soluta vitae voluptas?
+                    </p>
+                  </div>
+                </div>
+              </a>
+              <a href="">
+                <div class="d-flex align-items-start mb-5">
+                  <div class="bg-info me-sm-4 me-3 p-3" style="border-radius: 13px">
+                    <img
+                            src="public/assets/img/steps/taxi.svg"
+                            width="22"
+                            alt="steps"
+                    />
+                  </div>
+                  <div class="flex-1">
+                    <h5 class="text-secondary fw-bold fs-0">
+                      <a href="#">Digital Learning Kebudayaan Indonesia</a>
+                    </h5>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at itaque nobis perspiciatis saepe! Architecto, blanditiis
+                      commodi consectetur consequatur consequuntur distinctio hic inventore labore omnis, quisquam recusandae
+                      soluta vitae voluptas?
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+
           </div>
         </div>
         <!-- end of .container-->
@@ -460,183 +637,6 @@
       <!-- <section> close ============================-->
 
       <!-- <section> begin ============================-->
-      <section id="services">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-6 d-flex justify-content-center align-items-start">
-              <div class="card position-relative shadow" style="max-width: 370px">
-                <div
-                        class="position-absolute z-index--1 me-10 me-xxl-0"
-                        style="right: -160px; top: -210px"
-                >
-                  <img
-                          src="public/assets/img/steps/bg.png"
-                          style="max-width: 550px"
-                          alt="shape"
-                  />
-                </div>
-                <div class="card-body p-3">
-                  <img
-                          class="mb-4 mt-2 rounded-2 w-100"
-                          src="public/images/papua/2.jpg"
-                          alt="booking"
-                  />
-                  <div>
-                    <h5 class="fw-medium">Trip Raja empat</h5>
-                    <p class="fs--1 mb-3 fw-medium">
-                      14-29 June | by Robbin joseph
-                    </p>
-                    <div class="icon-group mb-4">
-                      <span class="btn icon-item">
-                        <img
-                                src="public/assets/img/steps/leaf.svg"
-                                alt="" /></span
-                      ><span class="btn icon-item">
-                        <img
-                                src="public/assets/img/steps/map.svg"
-                                alt="" /></span
-                    ><span class="btn icon-item">
-                        <img src="public/assets/img/steps/send.svg" alt=""
-                        /></span>
-                    </div>
-                    <div
-                            class="d-flex align-items-center justify-content-between"
-                    >
-                      <div class="d-flex align-items-center mt-n1">
-                        <img
-                                class="me-3"
-                                src="public/assets/img/steps/building.svg"
-                                width="18"
-                                alt="building"
-                        /><span class="fs--1 fw-medium">24 people going</span>
-                      </div>
-                      <div class="show-onhover position-relative">
-                        <div
-                                class="card hideEl shadow position-absolute end-0 start-xl-50 bottom-100 translate-xl-middle-x ms-3"
-                                style="width: 260px; border-radius: 18px"
-                        >
-                          <div class="card-body py-3">
-                            <div class="d-flex">
-                              <div style="margin-right: 10px">
-                                <img
-                                        class="rounded-circle"
-                                        src="public/assets/img/steps/favorite-placeholder.png"
-                                        width="50"
-                                        alt="favorite"
-                                />
-                              </div>
-                              <div>
-                                <p class="fs--1 mb-1 fw-medium">Ongoing</p>
-                                <h5 class="fw-medium mb-3">Trip to rome</h5>
-                                <h6 class="fs--1 fw-medium mb-2">
-                                  <span>40%</span> completed
-                                </h6>
-                                <div class="progress" style="height: 6px">
-                                  <div
-                                          class="progress-bar"
-                                          role="progressbar"
-                                          style="width: 40%"
-                                          aria-valuenow="25"
-                                          aria-valuemin="0"
-                                          aria-valuemax="100"
-                                  ></div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <button class="btn">
-                          <img
-                                  src="public/assets/img/steps/heart.svg"
-                                  width="20"
-                                  alt="step"
-                          />
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="mb-4 text-start">
-                <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Our Services</h3>
-                <h5 class="text-secondary">Tidak hanya berwisata secara virtual360,<br>
-                  pengunjung dapat merasakan berbagai pengalaman menarik lainnya dengan berbagai macam layanan yang tersedia.
-                </h5>
-              </div>
-              <a href="">
-              <div class="d-flex align-items-start mb-5">
-                <div class="bg-primary me-sm-4 me-3 p-3" style="border-radius: 13px">
-                  <img
-                    src="public/assets/img/steps/selection.svg"
-                    width="22"
-                    alt="steps"
-                  />
-                </div>
-                <div class="flex-1">
-                  <h5 class="text-secondary fw-bold fs-0">
-                    <a href="#">Virtual Tour 360</a>
-                  </h5>
-                  <p>
-                    Dengan teknologi 3D view 360 di mana memungkinkan
-                    <br class="d-none d-sm-block" />
-                    untuk mengelilingi Indonesia tanpa harus berpindah tempat.
-                  </p>
-                </div>
-              </div>
-              </a>
-              <a href="">
-              <div class="d-flex align-items-start mb-5">
-                <div class="bg-danger me-sm-4 me-3 p-3" style="border-radius: 13px">
-                  <img
-                    src="public/assets/img/steps/water-sport.svg"
-                    width="22"
-                    alt="steps"
-                  />
-                </div>
-                <div class="flex-1">
-                  <h5 class="text-secondary fw-bold fs-0">
-                    <a href="#">Pembelian Produk UMKM</a>
-                  </h5>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at itaque nobis perspiciatis saepe! Architecto, blanditiis
-                    commodi consectetur consequatur consequuntur distinctio hic inventore labore omnis, quisquam recusandae
-                    soluta vitae voluptas?
-                  </p>
-                </div>
-              </div>
-              </a>
-              <a href="">
-              <div class="d-flex align-items-start mb-5">
-                <div class="bg-info me-sm-4 me-3 p-3" style="border-radius: 13px">
-                  <img
-                    src="public/assets/img/steps/taxi.svg"
-                    width="22"
-                    alt="steps"
-                  />
-                </div>
-                <div class="flex-1">
-                  <h5 class="text-secondary fw-bold fs-0">
-                    <a href="#">Digital Learning Kebudayaan Indonesia</a>
-                  </h5>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at itaque nobis perspiciatis saepe! Architecto, blanditiis
-                    commodi consectetur consequatur consequuntur distinctio hic inventore labore omnis, quisquam recusandae
-                    soluta vitae voluptas?
-                  </p>
-                </div>
-              </div>
-              </a>
-            </div>
-
-          </div>
-        </div>
-        <!-- end of .container-->
-      </section>
-      <!-- <section> close ============================-->
-
-      <!-- <section> begin ============================-->
       <section id="partners">
       <div class="position-relative pt-9 pt-lg-8 pb-6 pb-lg-8">
         <div class="container">
@@ -872,7 +872,7 @@
           </div>
           <div class="row py-5 text-center">
             <p class="mb-0 text-secondary fs--1 fw-medium">
-              All rights reserved <a href="https://instagram.com/id360tour" class="text-danger">@id360tour</a>
+              All rights reserved <a href="https://instagram.com/id360tour" class="text-danger">@Indonesia360tour2022</a>
             </p>
           </div>
 
@@ -891,6 +891,30 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="public/vendors/fontawesome/all.min.js"></script>
     <script src="public/assets/js/theme.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script>
+      // Wrap every letter in a span
+      var textWrapper = document.querySelector('.hero-title');
+      textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+
+      anime.timeline({loop: true})
+              .add({
+                targets: '.hero-title .letter',
+                translateX: [40,0],
+                translateZ: 0,
+                opacity: [0,1],
+                easing: "easeOutExpo",
+                duration: 1200,
+                delay: (el, i) => 500 + 30 * i
+              }).add({
+        targets: '.hero-title .letter',
+        translateX: [0,-30],
+        opacity: [1,0],
+        easing: "easeInExpo",
+        duration: 1100,
+        delay: (el, i) => 100 + 30 * i
+      });
+    </script>
     <!--    End of JavaScripts-->
 
   </body>
