bold title about us

--- a/index.html
+++ b/index.html
@@ -193,11 +193,9 @@
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="mb-4 text-start">
-                <h5 class="text-secondary">About</h5>
                 <h3
                   class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize"
-                >
-                  Indonesia 360 Tour
+                >About
                 </h3>
               </div>
 
