--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-5 col-lg-6 order-0 order-md-1 text-end">
+            <!-- <div class="col-md-5 col-lg-6 order-0 order-md-1 text-end">
               <img
                 class="pt-7 pt-md-0 hero-img"
                 src="public/assets/img/hero/hero-img.png"
                 alt="hero-header"
               />
-            </div>
+            </div> -->
             <div class="col-md-7 col-lg-6 text-md-start text-center py-6">
               <h4 class="fw-bold text-warning mb-3">Truly Indonesia</h4>
               <h1 class="hero-title">Indonesia 360 Tour</h1>
