adding color palette (text, button, button:hover)

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
             >
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#aboutus"
-                  ><i class="fas fa-question-circle text-warning"></i> About
+                  ><i class="fas fa-question-circle text-biru"></i> About
                   Us</a
                 >
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#services"
                   >Services</a
@@ -79,7 +79,7 @@
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#destination"
                   >Destination</a
@@ -87,7 +87,7 @@
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#testimonial"
                   >Testimonial</a
@@ -95,7 +95,7 @@
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#partners"
                   >Our Partners</a
@@ -103,7 +103,7 @@
               </li>
               <li class="nav-item px-3 px-xl-4">
                 <a
-                  class="nav-link text-danger fw-medium"
+                  class="nav-link text-kuning fw-medium"
                   aria-current="page"
                   href="#"
                   >Login</a
@@ -133,9 +133,9 @@
               />
             </div> -->
             <div class="col-md-7 col-lg-6 text-md-start text-center py-6">
-              <h4 class="fw-bold text-warning mb-3">Truly Indonesia</h4>
+              <h4 class="fw-bold text-kuning mb-3">Truly Indonesia</h4>
               <h1 class="hero-title">Indonesia 360 Tour</h1>
-              <p class="mb-4 fw-medium text-danger">
+              <p class="mb-4 fw-medium text-kuning">
                 Nikmati pengalaman baru nan seru<br class="d-none d-xl-block" />
                 dalam menjelajahi Indonesia.
                 <br class="d-none d-xl-block" />
@@ -153,7 +153,7 @@
                   data-bs-toggle="modal"
                   data-bs-target="#popupVideo"
                   ><span
-                    class="btn btn-danger round-btn-lg rounded-circle me-3 danger-btn-shadow"
+                    class="btn btn-merah round-btn-lg rounded-circle me-3 danger-btn-shadow"
                   >
                     <img
                       src="public/assets/img/hero/play.svg"
@@ -768,7 +768,7 @@
 
         <section id="testimonial">
           <div class="position-relative pt-9 pt-lg-8 pb-6 pb-lg-8">
-    
+
             <div class="container">
               <div class="row">
                 <div class="col-lg-5">
@@ -1083,7 +1083,7 @@
                     </div>
                   </div>
                   <div class="col-sm-auto">
-                    <button class="btn btn-danger orange-gradient-btn fs--1">
+                    <button class="btn btn-merah orange-gradient-btn fs--1">
                       Notify Me!
                     </button>
                   </div>
@@ -1223,7 +1223,7 @@
           <div class="row py-5 text-center">
             <p class="mb-0 text-secondary fs--1 fw-medium">
               All rights reserved
-              <a href="https://instagram.com/id360tour" class="text-danger"
+              <a href="https://instagram.com/id360tour" class="text-merah"
                 >@Indonesia360tour2022</a
               >
             </p>
