change footer by saddam

--- a/index.html
+++ b/index.html
@@ -1136,42 +1136,43 @@
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
                     href="#"
-                    >Lorem ipsum</a
+                    >FAQ</a
                   >
                 </li>
               </ul>
             </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
+            <div class="col-lg-2 col-lg-4 mb-4 mb-lg-0 order-lg-2 order-md-3" >
               <h4
-                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4"
+                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4" 
               >
                 Contact
               </h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
                   <a
+                  class="link-900 fs-1 fw-medium text-decoration-none"
+                  href="mailto: svcc@smarteye.id" 
+                  >Email: svcc@smarteye.id</a
+                  >
+                </li>
+                <li class="mb-2">
+                  <a 
                     class="link-900 fs-1 fw-medium text-decoration-none"
                     href="#"
-                    >Help/FAQ</a
+                    >Phone: (022)2014508</a
                   >
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
                     href="#!"
-                    >Lorem ipsum</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#!"
-                    >Lorem ipsum</a
+                    >Location: Jl. Gegerkalong Hilir, Sukarasa, Kec. Sukasari, Kota Bandung, Jawa Barat 40152</a
                   >
                 </li>
               </ul>
+  
             </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-3 order-md-4">
+            <div class="col-lg-2 col-lg-3 mb-4 mb-lg-0 order-lg-3 order-md-4">
               <h4
                 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4"
               >
@@ -1202,9 +1203,9 @@
               </ul>
             </div>
             <div
-              class="col-lg-3 col-md-5 col-12 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1"
+              class="col-lg-5 col-md-7 col-12 mb-6 mb-md-6 mb-lg-0 order-lg-4 order-md-1"
             >
-              <div class="icon-group mb-4">
+              <div class="icon-group mb-6">
                 <a
                   class="text-decoration-none icon-item shadow-social"
                   id="instagram"
@@ -1224,7 +1225,7 @@
             <p class="mb-0 text-secondary fs--1 fw-medium">
               All rights reserved
               <a href="https://instagram.com/id360tour" class="text-merah"
-                >@Indonesia360tour2022</a
+                >@id360tour</a
               >
             </p>
           </div>
