--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
         ></div>
         <!--close of /.bg-holder-->
 
-        <div class="container">
+        <div class="container mt-6">
           <div class="row align-items-center">
-            <!-- <div class="col-md-5 col-lg-6 order-0 order-md-1 text-end">
+            <div class="col-md-5 col-lg-6 order-1 order-md-1 text-end">
               <img
                 class="pt-7 pt-md-0 hero-img"
-                src="public/assets/img/hero/hero-img.png"
+                src="https://holosbase.com/img/slide2/VR.png"
                 alt="hero-header"
               />
-            </div> -->
-            <div class="col-md-7 col-lg-6 text-md-start text-center py-6">
+            </div>
+            <div class="col-md-7 col-lg-6 order-0 text-md-start text-center py-6">
               <h4 class="fw-bold text-kuning mb-3">Truly Indonesia</h4>
               <h1 class="hero-title">Indonesia 360 Tour</h1>
               <p class="mb-4 fw-medium text-kuning">
@@ -765,10 +765,9 @@
       <!--      </section>-->
       <!-- <section> close ============================-->
 
-
-        <section id="testimonial">
+      <!-- <section> begin ============================-->
+      <section id="testimonial">
           <div class="position-relative pt-9 pt-lg-8 pb-6 pb-lg-8">
-
             <div class="container">
               <div class="row">
                 <div class="col-lg-5">
@@ -946,8 +945,10 @@
                 </div>
               </div>
             </div>
+          </div>
             <!-- end of .container-->
           </section>
+      <!-- <section> close ============================-->
 
       <!-- <section> begin ============================-->
       <section id="partners">
@@ -1028,18 +1029,13 @@
       <!-- <section> begin ============================-->
       <section class="pt-6">
         <div class="container">
-          <div
-            class="py-8 px-5 position-relative text-center"
-            style="
-              background-color: rgba(223, 215, 249, 0.199);
-              border-radius: 129px 20px 20px 20px;
-            "
+          <div class="py-8 px-5 position-relative text-center"
+               style="background-color: rgba(223, 215, 249, 0.199);border-radius: 129px 20px 20px 20px;"
           >
             <div
-              class="position-absolute start-100 top-0 translate-middle ms-md-n3 ms-n4 mt-3"
-            >
+              class="position-absolute start-100 top-0 translate-middle ms-md-n3 ms-n4 mt-3">
               <img
-                src="public/assets/img/cta/send.png"
+                src="http://assets.stickpng.com/images/584856bce0bb315b0f7675ad.png"
                 style="max-width: 70px"
                 alt="send icon"
               />
@@ -1051,9 +1047,7 @@
                 alt="cta shape"
               />
             </div>
-            <div
-              class="position-absolute start-0 bottom-0 ms-3 z-index--1 d-none d-sm-block"
-            >
+            <div class="position-absolute start-0 bottom-0 ms-3 z-index--1 d-none d-sm-block">
               <img
                 src="public/assets/img/cta/shape-bg1.png"
                 style="max-width: 340px"
@@ -1096,143 +1090,129 @@
       </section>
       <!-- <section> close ============================-->
 
-      <!-- <section> begin ============================-->
+      <!-- <footer section> begin ============================-->
       <section class="pb-0 pb-lg-4 bg-footer">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
+            <div class="col-lg-3 col-md-3 mb-4 mb-lg-0 order-lg-0 order-md-0 order-0 d-flex justify-content-center">
               <img
                 class="mb-4"
-                src="public/images/logo.jpeg"
-                width="150"
-                alt="id360Tour"
+                src="public/images/logotranspr.png"
+                width="200"
+                height="200"
+                alt="id360Tour Logo"
               />
-              <!-- <p class="fs--1 text-secondary mb-0 fw-medium">
-                Book your trip in minute, get full Control for much longer.
-              </p> -->
             </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
-              <h4
-                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4"
-              >
-                Company
-              </h4>
+            <div class="col-lg-3 col-md-2 mb-4 mb-lg-0 order-lg-1 order-md-2">
+              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Company</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#aboutus"
-                    >About Us</a
-                  >
+                    href="#aboutus">
+                    About Us
+                  </a>
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="https://svcc.io"
-                    >SVCC Indonesia</a
-                  >
+                    href="https://svcc.io">
+                    SVCC Indonesia
+                  </a>
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#"
-                    >FAQ</a
-                  >
+                    href="#">
+                    FAQ
+                  </a>
                 </li>
               </ul>
             </div>
-            <div class="col-lg-2 col-lg-4 mb-4 mb-lg-0 order-lg-2 order-md-3" >
-              <h4
-                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4" 
-              >
-                Contact
-              </h4>
+            <div class="col-lg-3 col-lg-3 mb-4 mb-lg-0 order-lg-2 order-md-3" >
+              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Contact</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
                   <a
                   class="link-900 fs-1 fw-medium text-decoration-none"
-                  href="mailto: svcc@smarteye.id" 
-                  >Email: svcc@smarteye.id</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a 
-                    class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#"
-                    >Phone: (022)2014508</a
-                  >
+                  href="mailto: svcc@smarteye.id">
+                    Email: svcc@smarteye.id
+                  </a>
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#!"
-                    >Location: Jl. Gegerkalong Hilir, Sukarasa, Kec. Sukasari, Kota Bandung, Jawa Barat 40152</a
-                  >
+                    href="#">
+                    Phone: (022)2014508
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a
+                    class="link-900 fs-1 fw-medium text-decoration-none"
+                    href="#!">
+                    Location: Jl. Gegerkalong Hilir, Sukarasa, Kec. Sukasari, Kota Bandung, Jawa Barat 40152
+                  </a>
                 </li>
               </ul>
-  
             </div>
-            <div class="col-lg-2 col-lg-3 mb-4 mb-lg-0 order-lg-3 order-md-4">
-              <h4
-                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4"
-              >
-                More
-              </h4>
+            <div class="col-lg-3 col-lg-2 mb-4 mb-lg-0 order-lg-3 order-md-4">
+              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">More</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#!"
-                    >Lorem ipsum</a
-                  >
+                    href="#!">
+                    Lorem ipsum
+                  </a>
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#!"
-                    >Lorem ipsum</a
-                  >
+                    href="#!">Lorem ipsum
+                  </a>
                 </li>
                 <li class="mb-2">
                   <a
                     class="link-900 fs-1 fw-medium text-decoration-none"
-                    href="#!"
-                    >Lorem ipsum</a
-                  >
+                    href="#!">
+                    Lorem ipsum
+                  </a>
                 </li>
               </ul>
             </div>
-            <div
-              class="col-lg-5 col-md-7 col-12 mb-6 mb-md-6 mb-lg-0 order-lg-4 order-md-1"
-            >
+            <div class="col-lg-12 col-lg-12 mb-4 mt-5 mb-lg-0 order-lg-4 order-md-5 d-flex justify-content-center">
               <div class="icon-group mb-6">
                 <a
                   class="text-decoration-none icon-item shadow-social"
                   id="instagram"
-                  href="https://instagram.com/id360tour"
-                  ><i class="fab fa-instagram"> </i
-                ></a>
+                  href="https://instagram.com/id360tour"><i class="fab fa-instagram"> </i>
+                </a>
                 <a
                   class="text-decoration-none icon-item shadow-social"
                   id="facebook"
-                  href="https://www.tiktok.com/@id360tour"
-                  ><i class="fab fa-tiktok"> </i>
+                  href="https://www.tiktok.com/@id360tour"><i class="fab fa-tiktok"> </i>
+                </a>
+                <a class="text-decoration-none icon-item shadow-social"
+                   id="youtube"
+                   href="#"><i class="fab fa-youtube"> </i>
+                </a>
+                <a class="text-decoration-none icon-item shadow-social"
+                   id="linkedin"
+                   href="#"><i class="fab fa-linkedin"> </i>
                 </a>
               </div>
             </div>
           </div>
           <div class="row py-5 text-center">
-            <p class="mb-0 text-secondary fs--1 fw-medium">
-              All rights reserved
-              <a href="https://instagram.com/id360tour" class="text-merah"
-                >@id360tour</a
-              >
+            <p class="mb-0 text-secondary fs--1 fw-medium">All rights reserved
+              <a href="https://instagram.com/id360tour" class="text-merah">@id360tour</a>
             </p>
           </div>
         </div>
         <!-- end of .container-->
       </section>
-      <!-- <section> close ============================-->
+      <!-- <footer section> close ============================-->
+
     </main>
     <!--    End of Main Content-->
 
