ganti foto ITDRIFEST

--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
                   <div class="card-body text-center">
                     <img
                       class="img-fluid"
-                      src="public/images/partners/itdrifest.png"
+                      src="https://fest.itdri.id/static/media/logo-itdri.3d10ab6c.png"
                       alt=""
                     />
                   </div>
