adding embed dari artsteps

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                 >
               </li>
               <li class="nav-item px-3 px-xl-4">
+                <a class="nav-link text-kuning fw-medium"
+                   aria-current="page"
+                   href="#prototype">Prototype</a
+                >
+              </li>
+              <li class="nav-item px-3 px-xl-4">
                 <a
                   class="nav-link text-kuning fw-medium"
                   aria-current="page"
@@ -101,14 +107,14 @@
                   >Our Partners</a
                 >
               </li>
-              <li class="nav-item px-3 px-xl-4">
-                <a
-                  class="nav-link text-kuning fw-medium"
-                  aria-current="page"
-                  href="#"
-                  >Login</a
-                >
-              </li>
+<!--              <li class="nav-item px-3 px-xl-4">-->
+<!--                <a-->
+<!--                  class="nav-link text-kuning fw-medium"-->
+<!--                  aria-current="page"-->
+<!--                  href="#"-->
+<!--                  >Login</a-->
+<!--                >-->
+<!--              </li>-->
             </ul>
           </div>
         </div>
@@ -643,6 +649,32 @@
                 </div>
               </a>
             </div>
+          </div>
+        </div>
+        <!-- end of .container-->
+      </section>
+      <!-- <section> close ============================-->
+
+      <!-- <section> begin ============================-->
+      <section class="pt-5 pt-md-9" id="prototype">
+        <div class="container">
+          <div class="mb-7 text-center">
+            <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">
+              Prototype
+            </h3>
+            <h5 class="text-secondary">
+              Rasakan pengalaman jelajah Indonesia secara virtual melalui prototype di bawah ini.
+              <br>
+              Klik tombol <i class="fa fa-info"></i> di bawah untuk tutorial penggunaan.
+            </h5>
+          </div>
+          <div class=" d-flex justify-content-center">
+            <iframe width="100%"
+                    height="720"
+                    src="https://www.artsteps.com/embed/62489e716b52fc7b54fa087e/1280/720" frameborder="0"
+                    allowfullscreen
+            >
+          </iframe>
           </div>
         </div>
         <!-- end of .container-->
