--- a/kategori.html
+++ b/kategori.html
@@ -21,7 +21,7 @@
       data-aos="fade-down"
     >
       <div class="container">
-        <a href="/index.html" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img src="public/images/Vector.png" alt="logo" />
         </a>
 
@@ -37,18 +37,18 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/index.html" class="nav-link">Beranda</a>
+              <a href="index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Kategori</a>
+              <a href="index.html" class="nav-link">Kategori</a>
             </li>
             <li class="nav-item">
-              <a href="/index.html" class="nav-link">Registrasi</a>
+              <a href="index.html" class="nav-link">Registrasi</a>
             </li>
 
             <li class="nav-item active">
               <a
-                href="/index.html"
+                href="index.html"
                 class="btn btn-success nav-link px-4 text-white"
                 >Login</a
               >
@@ -174,7 +174,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="component-products d-block">
+              <a href="details.html" class="component-products d-block">
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
@@ -191,7 +191,7 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <a href="/details.html" class="component-products d-block">
+              <a href="details.html" class="component-products d-block">
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
@@ -208,7 +208,7 @@
               data-aos="fade-up"
               data-aos-delay="700"
             >
-              <a href="/details.html" class="component-products d-block">
+              <a href="details.html" class="component-products d-block">
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
@@ -225,7 +225,7 @@
               data-aos="fade-up"
               data-aos-delay="800"
             >
-              <a href="/details.html" class="component-products d-block">
+              <a href="details.html" class="component-products d-block">
                 <div class="products-thumbnail">
                   <div
                     class="products-image"
