--- a/details.html
+++ b/details.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/index.html" class="nav-link">Beranda</a>
+              <a href="index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="/kategori.html" class="nav-link">Kategori</a>
+              <a href="kategori.html" class="nav-link">Kategori</a>
             </li>
         
           </ul>
@@ -67,8 +67,8 @@
                   Hi, adzan
                 </a>
                 <div class="dropdown-menu">
-                  <a href="/dashboard.html" class="dropdown-item"> Dashboard</a>
-                  <a href="/dashboard-account.html" class="dropdown-item"
+                  <a href="dashboard.html" class="dropdown-item"> Dashboard</a>
+                  <a href="dashboard-account.html" class="dropdown-item"
                     >Settings
                     </a>
                   <div class="dropdown-divider"></div>
@@ -92,7 +92,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link d-inline-block">
+                <a href="card.html" class="nav-link d-inline-block">
                   Card
                 </a>
               </li>
@@ -111,7 +111,7 @@
               <nav>
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
-                    <a href="/index.html"> Home </a>
+                    <a href="index.html"> Home </a>
                   </li>
                   <li class="breadcrumb-item active">
                     Product Details
@@ -163,7 +163,7 @@
                 <div class="price">14,890</div>
               </div>
               <div class="col-lg-2" data-aos="zoom-in">
-                <a href="/card.html" class="btn btn-success px-4 text-white btn-block mb-3">
+                <a href="card.html" class="btn btn-success px-4 text-white btn-block mb-3">
                   Add to Card
                 </a>
               </div>
