--- a/login.html
+++ b/login.html
@@ -88,13 +88,13 @@
                 </div>
 
                 <a
-                  href="/dashboard.html"
+                  href="dashboard.html"
                   class="btn btn-success btn-block w-75 mt-3"
                 >
                   Sign In To MyAccount
                 </a>
                 <a
-                  href="/register.html"
+                  href="register.html"
                   class="btn btn-signup btn-block w-75 mt-2"
                 >
                   Sign Up
