--- a/register.html
+++ b/register.html
@@ -146,13 +146,13 @@
                 </div>
 
                 <a
-                  href="/dashboard.html"
+                  href="dashboard.html"
                   class="btn btn-success btn-block mt-3"
                 >
                   Sign Up Now
                 </a>
 
-                <a href="/login.html" class="btn btn-signup btn-block mt-2">
+                <a href="login.html" class="btn btn-signup btn-block mt-2">
                   Back To SignIn
                 </a>
               </form>
