--- a/register_success.html
+++ b/register_success.html
@@ -28,10 +28,10 @@
                 bersama kami. Let’s grow up now.
               </p>
               <div>
-                <a href="/dashboard.html" class="btn btn-success w-50 mt-4">
+                <a href="dashboard.html" class="btn btn-success w-50 mt-4">
                   MyDashboard
                 </a>
-                <a href="/index.html" class="btn btn-signup w-50 mt-3">
+                <a href="index.html" class="btn btn-signup w-50 mt-3">
                   GoTo Shopping
                 </a>
               </div>
