--- a/card.html
+++ b/card.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/index.html" class="nav-link">Beranda</a>
+              <a href="index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="/kategori.html" class="nav-link">Kategori</a>
+              <a href="kategori.html" class="nav-link">Kategori</a>
             </li>        
           </ul>
 
@@ -289,7 +289,7 @@
               <div class="product-subtitle">Total</div>
             </div>
             <div class="col-8 col-md-3">
-              <a href="/success.html" class="btn btn-success mt-4 px-4 btn-block">
+              <a href="success.html" class="btn btn-success mt-4 px-4 btn-block">
                 Checkout Now
               </a>
             </div>
