--- a/kategori.html
+++ b/kategori.html
@@ -43,12 +43,12 @@
               <a href="index.html" class="nav-link">Kategori</a>
             </li>
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Registrasi</a>
+              <a href="register.html" class="nav-link">Registrasi</a>
             </li>
 
             <li class="nav-item active">
               <a
-                href="index.html"
+                href="login.html"
                 class="btn btn-success nav-link px-4 text-white"
                 >Login</a
               >
