--- a/register.html
+++ b/register.html
@@ -37,14 +37,14 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Beranda</a>
+              <a href="index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="/kategori.html" class="nav-link">Kategori</a>
+              <a href="kategori.html" class="nav-link">Kategori</a>
             </li>
             <li class="nav-item active">
               <a
-                href="/login.html"
+                href="login.html"
                 class="btn btn-success nav-link px-4 text-white"
                 >Login</a
               >
